crates/rlf-macros/tests/fail/default_multidimensional.rs
use rlf::rlf;

rlf! {
    card = { *nom.one: "card", other: "cards" };
}

fn main() {}
