crates/rlf-macros/tests/fail/default_multidimensional.stderr
error: '*' cannot be used on multi-dimensional key 'nom.one'
 --> tests/fail/default_multidimensional.rs:4:15
  |
4 |     card = { *nom.one: "card", other: "cards" };
  |               ^^^
